Fix regression introduced by 042f0c8
Closes GH-34770